--- a/TwitchBots.StebBot/TwitchBots.StebBot.csproj
+++ b/TwitchBots.StebBot/TwitchBots.StebBot.csproj
@@ -4,7 +4,11 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="AsyncAwaitBestPractices" Version="4.3.0" />
+      <PackageReference Include="TwitchLib" Version="3.3.0" />
+    </ItemGroup>
 
 </Project>
